crates/crochet_parser/src/snapshots/crochet_parser__tests__function_application-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: parse(src)
---
Program {
    body: [
        VarDecl {
            span: 9..57,
            pattern: Ident(
                BindingIdent {
                    span: 13..14,
                    id: Ident {
                        span: 13..14,
                        name: "S",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 17..57,
                        params: [
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 18..19,
                                        id: Ident {
                                            span: 18..19,
                                            name: "f",
                                        },
                                    },
                                ),
                                type_ann: None,
                            },
                        ],
                        body: Lambda(
                            Lambda {
                                span: 24..57,
                                params: [
                                    EFnParam {
                                        pat: Ident(
                                            EFnParamBindingIdent {
                                                span: 25..26,
                                                id: Ident {
                                                    span: 25..26,
                                                    name: "g",
                                                },
                                            },
                                        ),
                                        type_ann: None,
                                    },
                                ],
                                body: Lambda(
                                    Lambda {
                                        span: 31..57,
                                        params: [
                                            EFnParam {
                                                pat: Ident(
                                                    EFnParamBindingIdent {
                                                        span: 32..33,
                                                        id: Ident {
                                                            span: 32..33,
                                                            name: "x",
                                                        },
                                                    },
                                                ),
                                                type_ann: None,
                                            },
                                        ],
                                        body: App(
                                            App {
                                                span: 38..57,
                                                lam: App(
                                                    App {
                                                        span: 38..42,
                                                        lam: Ident(
                                                            Ident {
                                                                span: 38..39,
                                                                name: "f",
                                                            },
                                                        ),
                                                        args: [
                                                            ExprOrSpread {
                                                                spread: None,
                                                                expr: Ident(
                                                                    Ident {
                                                                        span: 40..41,
                                                                        name: "x",
                                                                    },
                                                                ),
                                                            },
                                                        ],
                                                    },
                                                ),
                                                args: [
                                                    ExprOrSpread {
                                                        spread: None,
                                                        expr: App(
                                                            App {
                                                                span: 43..47,
                                                                lam: Ident(
                                                                    Ident {
                                                                        span: 43..44,
                                                                        name: "g",
                                                                    },
                                                                ),
                                                                args: [
                                                                    ExprOrSpread {
                                                                        spread: None,
                                                                        expr: Ident(
                                                                            Ident {
                                                                                span: 45..46,
                                                                                name: "x",
                                                                            },
                                                                        ),
                                                                    },
                                                                ],
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                        is_async: false,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
        VarDecl {
            span: 57..89,
            pattern: Ident(
                BindingIdent {
                    span: 61..62,
                    id: Ident {
                        span: 61..62,
                        name: "K",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 65..89,
                        params: [
                            EFnParam {
                                pat: Ident(
                                    EFnParamBindingIdent {
                                        span: 66..67,
                                        id: Ident {
                                            span: 66..67,
                                            name: "x",
                                        },
                                    },
                                ),
                                type_ann: None,
                            },
                        ],
                        body: Lambda(
                            Lambda {
                                span: 72..89,
                                params: [
                                    EFnParam {
                                        pat: Ident(
                                            EFnParamBindingIdent {
                                                span: 73..74,
                                                id: Ident {
                                                    span: 73..74,
                                                    name: "y",
                                                },
                                            },
                                        ),
                                        type_ann: None,
                                    },
                                ],
                                body: Ident(
                                    Ident {
                                        span: 79..80,
                                        name: "x",
                                    },
                                ),
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
        VarDecl {
            span: 89..113,
            pattern: Ident(
                BindingIdent {
                    span: 93..94,
                    id: Ident {
                        span: 93..94,
                        name: "I",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                App(
                    App {
                        span: 97..113,
                        lam: App(
                            App {
                                span: 97..101,
                                lam: Ident(
                                    Ident {
                                        span: 97..98,
                                        name: "S",
                                    },
                                ),
                                args: [
                                    ExprOrSpread {
                                        spread: None,
                                        expr: Ident(
                                            Ident {
                                                span: 99..100,
                                                name: "K",
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                        args: [
                            ExprOrSpread {
                                spread: None,
                                expr: Ident(
                                    Ident {
                                        span: 102..103,
                                        name: "K",
                                    },
                                ),
                            },
                        ],
                    },
                ),
            ),
            declare: false,
        },
    ],
}
