crates/crochet_parser/src/snapshots/crochet_parser__tests__function_definition-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"(a, ...b) => true;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..18,
                expr: Expr {
                    span: 0..17,
                    kind: Lambda(
                        Lambda {
                            params: [
                                EFnParam {
                                    pat: Pattern {
                                        span: 1..2,
                                        kind: Ident(
                                            BindingIdent {
                                                name: "a",
                                                mutable: false,
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                                EFnParam {
                                    pat: Pattern {
                                        span: 4..8,
                                        kind: Rest(
                                            RestPat {
                                                arg: Pattern {
                                                    span: 7..8,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "b",
                                                            mutable: false,
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Expr {
                                span: 13..17,
                                kind: Lit(
                                    Bool(
                                        Bool {
                                            span: 13..17,
                                            value: true,
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
