crates/crochet_parser/src/snapshots/crochet_parser__tests__function_definition-5.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"({x, y}) => x + y;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..18,
                expr: Expr {
                    span: 0..17,
                    kind: Lambda(
                        Lambda {
                            params: [
                                EFnParam {
                                    pat: Object(
                                        EFnParamObjectPat {
                                            span: 1..7,
                                            props: [
                                                Assign(
                                                    EFnParamAssignPatProp {
                                                        key: Ident {
                                                            span: 2..3,
                                                            name: "x",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                                Assign(
                                                    EFnParamAssignPatProp {
                                                        key: Ident {
                                                            span: 5..6,
                                                            name: "y",
                                                        },
                                                        value: None,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Expr {
                                span: 12..17,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Add,
                                        left: Expr {
                                            span: 12..13,
                                            kind: Ident(
                                                Ident {
                                                    span: 12..13,
                                                    name: "x",
                                                },
                                            ),
                                        },
                                        right: Expr {
                                            span: 16..17,
                                            kind: Ident(
                                                Ident {
                                                    span: 16..17,
                                                    name: "y",
                                                },
                                            ),
                                        },
                                    },
                                ),
                            },
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                },
            },
        ],
    },
)
