crates/crochet_parser/src/snapshots/crochet_parser__tests__function_definition-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"({x: p, y: q}) => p + q;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..24,
                expr: Expr {
                    span: 0..23,
                    kind: Lambda(
                        Lambda {
                            params: [
                                EFnParam {
                                    pat: Pattern {
                                        span: 1..13,
                                        kind: Object(
                                            ObjectPat {
                                                props: [
                                                    KeyValue(
                                                        KeyValuePatProp {
                                                            key: Ident {
                                                                span: 2..3,
                                                                name: "x",
                                                            },
                                                            value: Pattern {
                                                                span: 5..6,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "p",
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                    KeyValue(
                                                        KeyValuePatProp {
                                                            key: Ident {
                                                                span: 8..9,
                                                                name: "y",
                                                            },
                                                            value: Pattern {
                                                                span: 11..12,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "q",
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                ],
                                                optional: false,
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                    type_ann: None,
                                    optional: false,
                                    mutable: false,
                                },
                            ],
                            body: Expr {
                                span: 18..23,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Add,
                                        left: Expr {
                                            span: 18..19,
                                            kind: Ident(
                                                Ident {
                                                    span: 18..19,
                                                    name: "p",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            span: 22..23,
                                            kind: Ident(
                                                Ident {
                                                    span: 22..23,
                                                    name: "q",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
