crates/crochet_parser/src/snapshots/crochet_parser__tests__function_definition-7.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"(a?: boolean, b?) => c;\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 23,
                    },
                },
                span: 0..23,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 22,
                        },
                    },
                    span: 0..22,
                    kind: Lambda(
                        Lambda {
                            params: [
                                EFnParam {
                                    pat: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 1,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 2,
                                            },
                                        },
                                        span: 1..2,
                                        kind: Ident(
                                            BindingIdent {
                                                name: "a",
                                                mutable: false,
                                                span: 1..2,
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 1,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 2,
                                                    },
                                                },
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                    type_ann: Some(
                                        TypeAnn {
                                            kind: Keyword(
                                                KeywordType {
                                                    keyword: Boolean,
                                                },
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 12,
                                                },
                                            },
                                            span: 5..12,
                                            inferred_type: None,
                                        },
                                    ),
                                    optional: true,
                                    mutable: false,
                                },
                                EFnParam {
                                    pat: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 14,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 15,
                                            },
                                        },
                                        span: 14..15,
                                        kind: Ident(
                                            BindingIdent {
                                                name: "b",
                                                mutable: false,
                                                span: 14..15,
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 14,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 15,
                                                    },
                                                },
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                    type_ann: None,
                                    optional: true,
                                    mutable: false,
                                },
                            ],
                            body: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 21,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 22,
                                    },
                                },
                                span: 21..22,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 21,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 22,
                                            },
                                        },
                                        span: 21..22,
                                        name: "c",
                                    },
                                ),
                                inferred_type: None,
                            },
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
